# nyu_robotics_sentry_LIDAR

./: .start_robot.sh.swp  FIX_AFT_MAPPED_FLY_AWAY.md  FIX_POINT_CLOUD_ROTATION.md  README.md  README_LIDAR.md  adjust_acc_norm.sh  clicked_point_logger.py  diagnose_dual_lidar.sh  diagnose_dual_lidar_network.sh  map_point_picker.py  mid360 command.txt  mid360_command.txt  my_nav2_params.yaml  my_nav2_params_test.yaml  restore_stable_config_with_imu.sh  serial_sender.py  start_robot.sh  start_robot_no_bt.sh  start_robot_unilidar.sh  test_acc_norm.sh  test_dual_lidar.sh  test_single_lidar.sh  test_usb_lidar.sh  unilidar.txt  unilidar_command.txt
configs/unitree_l2_complete/: COMPLETE_SETUP_GUIDE.md  QUICK_START.md  README.md  dual_unilidar_drivers.launch.py  launch_complete_system.launch.py  nav2_params.yaml  point_lio_config.yaml  pointcloud_to_laserscan_params.yaml  setup_complete_system.sh  start_complete_system.sh
docs/: DUAL_LIDAR_MID360_LIVOX.md  DUAL_LIDAR_SENTRY_DEPLOYMENT.md
install/: local_setup.sh  setup.sh
install/fake_vel_transform/include/fake_vel_transform/: fake_vel_transform.hpp
install/fake_vel_transform/lib/fake_vel_transform/: fake_vel_transform_node
install/fake_vel_transform/share/fake_vel_transform/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/livox_dual_merge/: package.xml  setup.cfg  setup.py
src/livox_dual_merge/launch/: dual_lidar_merge_launch.py
src/livox_dual_merge/livox_dual_merge/: merge_node.py
src/log/: latest_build
(+521 files in other folders)
