<?xml version="1.0"?>
<package format="2">
  <name>livox_dual_merge</name>
  <version>0.0.1</version>
  <description>Merge dual Livox Mid360 pointcloud and IMU for FAST-LIO</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>livox_ros_driver2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
